--- a/dkms.conf
+++ b/dkms.conf
@@ -1,6 +1,6 @@
 PACKAGE_NAME="ncpfs"
 PACKAGE_VERSION="2.2.6"
-MAKE="KDIR=/lib/modules/$kernelver/build MDIR=/lib/modules/$kernelver make"
+MAKE="KDIR=/lib/modules/$kernelver/build MDIR=/lib/modules/$kernelver make SKIP_STACK_VALIDATION=1"
 CLEAN="make clean"
 BUILT_MODULE_NAME[0]="ncpfs"
 AUTOINSTALL="yes"
