kernel >=5.15 - patches for compaibility, removing IPX stuff

--- a/Kconfig
+++ b/Kconfig
@@ -3,15 +3,15 @@
 #
 config NCP_FS
 	tristate "NCP file system support (to mount NetWare volumes)"
-	depends on IPX!=n || INET
+	depends on INET
 	help
-	  NCP (NetWare Core Protocol) is a protocol that runs over IPX and is
-	  used by Novell NetWare clients to talk to file servers.  It is to
-	  IPX what NFS is to TCP/IP, if that helps.  Saying Y here allows you
-	  to mount NetWare file server volumes and to access them just like
-	  any other Unix directory.  For details, please read the file
+	  NCP (NetWare Core Protocol) is a protocol that runs over TCP/IP and
+	  is used by Novell NetWare clients to talk to file servers.  
+	  Saying Y here allows you to mount NetWare file server volumes and 
+	  to access them just like any other Unix directory.  
+	  For details, please read the file
 	  <file:Documentation/filesystems/ncpfs.txt> in the kernel source and
-	  the IPX-HOWTO from <http://www.tldp.org/docs.html#howto>.
+	  the HOWTO from <http://www.tldp.org/docs.html#howto>.
 
 	  You do not have to say Y here if you want your Linux box to act as a
 	  file *server* for Novell NetWare clients.
